src/objects/Address__c.object
<CustomObject>
    <description>Address of a customer</description>
    <fields>
        <fullName>AddressType__c</fullName>
        <label>Address Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractLegalName__c</fullName>
        <label>Contract Legal Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerNumber__c</fullName>
        <label>Customer Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DayTelephoneExtension__c</fullName>
        <label>Day Telephone Extension</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DayTelephone__c</fullName>
        <label>Day Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EmailAddress__c</fullName>
        <label>eMail Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FaxNumber__c</fullName>
        <label>Fax Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>JobOwner</description>
        <label>JobOwner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegalStatusOther__c</fullName>
        <label>Legal Status Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegalStatus__c</fullName>
        <label>Legal Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiddleInitial__c</fullName>
        <label>Middle Initial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobileTelePhone__c</fullName>
        <label>Mobile TelePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NightTelephone__c</fullName>
        <label>Night Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NotifObjNumber__c</fullName>
        <label>NotifObjNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notifications__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notifications</label>
        <referenceTo>Notifications__c</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Root_NotifNumber__c</fullName>
        <label>Root_NotifNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Root_ObjNumber__c</fullName>
        <label>Root_ObjNumber</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>ZipCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>